--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.2",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.3.29",
     "i18next": "^23.11.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
