--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "framer-motion": "^11.3.29",
     "i18next": "^23.11.5",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
