[UPDATE] : Amélioration du contact

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.2",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.29",
     "i18next": "^23.11.5",
     "jquery": "^3.7.1",
@@ -30,7 +31,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "three": "^0.167.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
