--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
@@ -35,7 +36,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm install && react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
