--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "^8.17.6",
+    "@mui/material": "^6.0.2",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.2",
+    "drei": "^2.2.21",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
-    "framer-motion": "^11.3.29",
+    "framer-motion": "^11.5.4",
     "i18next": "^23.11.5",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
@@ -24,13 +28,19 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-parallax": "^3.5.1",
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
+    "react-three-fiber": "^6.0.13",
+    "react-tilt": "^1.0.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "three": "^0.167.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -60,6 +70,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.10"
   }
 }
