[FIX] : Modification du parcours
Nous somme passez du react chrono a react-timeline permettant de la responsivité, une meilleurs lisibilité et une expérience des plus agréables

cette modification est du au problème de responsive et au retour client

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-spring": "^9.7.4",
     "react-three-fiber": "^6.0.13",
     "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
+    "rsuite": "^5.70.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "three": "^0.167.1",
