[FIX] : Modification de carte
Maintenant, nous pouvons voir ma localisation mais aussi la localisation de l'appareil (après demande)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "drei": "^2.2.21",
     "emailjs-com": "^3.2.0",
@@ -20,6 +21,8 @@
     "i18next": "^23.11.5",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
     "react-confetti": "^6.1.0",
