--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "e-portfolio",
+  "homepage": "https://soullikeplayer.github.io/e-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -52,6 +53,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm install && react-scripts start\"",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -75,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.10"
   }
 }
