[FEAT + FIX] : Ajout de l'article "passion" + redesign du content et carousel

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "concurrently \"npm install && react-scripts start\"",
+    "start": "concurrently \"npm install && react-scripts start && npm4 deploy\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
